# AutoFold

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  README.rst  bot.py  config.toml  database.py  main.py  manifold_api.py  manifold_database.py  manifold_subscriber.py  print_dir.py  pyproject.toml  requirements.txt  setup.py  todo.txt
.github/workflows/: ci-cd.yml  python-publish.yml
autofold/: api.py  automation.py  bot.py  database.py  strategy.py  subscriber.py
autofold/utils/: calculate_cpmm.py  manifold_dump_reader.py
docs/: conf.py  index.rst  overview.rst  userguide.rst
docs/automation_interfaces/: automation.rst  automation_bot.rst
docs/getting_started/: quickstart.rst
docs/manifold/: database.rst  subscriber.rst  utils.rst
docs/manifold_interfaces/: api.rst  database_schema.rst  subscriber.rst
docs/tutorials/: bet_automation.rst
docs/utils/: utils.rst
examples/: bet_automation.py  example_automation.py  example_strategy.py  template_automation.py  test_install.py
manifold/: manifold_api.py  manifold_database.py  manifold_subscriber.py
strategies/: example_strategy.py  strategy.py  template_strategy.py
tests/: test_manifold_subscriber.py
utils/: str_utils.py
