[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoFold"
version = "1.0"
description = "Hassle-free and easy to use bot for [Manifold.markets](https://manifold.markets)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
# authors = [
#   {name = "Pradyun Gedam", email = "pradyun@example.com"},
#   {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
#   {name = "Another person"},
#   {email = "different.person@example.com"},
# ]
# maintainers = [
#   {name = "Brett Cannon", email = "brett@python.org"}
# ]
# classifiers = [
#   "Development Status :: 4 - Beta",
#   "Programming Language :: Python"
# ]

dependencies = [
    "toml",
    "loguru",
    "tinydb",
    "apscheduler",
    "requests"
]

# dynamic = ["version", "description"]

# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"