[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autofold"
version = "0.2.2"
description = "All-in-one API, local database, data subscriber and bot interface for Manifold.markets"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["manifold", "markets", "manifold.markets", "api", "bot", "trading bot", "utility"]
authors = [
  {name = "William Allen"},
]
# maintainers = [
#   {name = "Brett Cannon", email = "brett@python.org"}
# ]
# classifiers = [
#   "Development Status :: 4 - Beta",
#   "Programming Language :: Python"
# ]

dependencies = [
    "toml",
    "loguru",
    "tinydb",
    "apscheduler",
    "requests"
]

# dynamic = ["version", "description"]

# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

[project.urls]
Documentation = "https://manifoldbot.readthedocs.io/en/release/"
Repository = "https://github.com/willjallen/AutoFold"
# Homepage = "https://example.com"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"